@@ -1,104 +1,106 @@
 import org.apache.commons.io.IOUtils;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import java.util.*;
 import java.util.regex.*;
+import java.util.*;
 
 public class Main {
-    public static void main(String[] args) throws Exception {
-        String rawData = (new Main()).readRawDataToString();
-        String output = parseJerkSON(rawData);
-        System.out.println(output);
-    }
 
     public String readRawDataToString() throws Exception {
+        // Load the RawData.txt content as a string from resources
         ClassLoader classLoader = getClass().getClassLoader();
-        return new String(Objects.requireNonNull(classLoader.getResourceAsStream("RawData.txt"))
-                .readAllBytes());
+        return IOUtils.toString(classLoader.getResourceAsStream("RawData.txt"), "UTF-8");
     }
 
-    public static String parseJerkSON(String rawData) {
-        // Regex for splitting entries and extracting key-value pairs
-        String entryDelimiter = "##";
-        String keyValuePattern = "(\\w+)([:@^*%!])(.*?)(?=(;|##))";
+    public static void main(String[] args) throws Exception {
+        // Read raw data from the file
+        String rawData = (new Main()).readRawDataToString();
 
-        // Storage for processed data
-        Map<String, Map<String, Integer>> data = new LinkedHashMap<>();
+        // Initialize counts and error counter
+        int milkCount = 0, breadCount = 0, cookiesCount = 0, applesCount = 0;
+        int milkPrice323Count = 0, breadPrice123Count = 0, cookiesPrice225Count = 0, applesPrice025Count = 0, applesPrice023Count = 0;
         int errorCount = 0;
 
-        // Split by entry delimiter
-        String[] entries = rawData.split(entryDelimiter);
+        // Define regex pattern for key-value pairs
+        String keyValuePattern = "(\\w+)([:@^*%!])(.*?)(?=(;|##))";
         Pattern pattern = Pattern.compile(keyValuePattern);
 
+        // Split the raw data into entries by "##" delimiter
+        String[] entries = rawData.split("##");
+
+        // Process each entry
         for (String entry : entries) {
-            Map<String, String> entryData = new HashMap<>();
             Matcher matcher = pattern.matcher(entry);
+            String itemName = null;
+            String itemPrice = null;
 
             while (matcher.find()) {
-                String key = normalizeKey(matcher.group(1));
-                String value = matcher.group(3).trim();
+                String key = matcher.group(1);
+                String value = matcher.group(3);
 
-                if (key.isEmpty() || value.isEmpty()) {
-                    errorCount++;
-                } else {
-                    entryData.put(key, value);
+                if ("name".equals(key)) {
+                    itemName = value;
+                } else if ("price".equals(key)) {
+                    itemPrice = value;
                 }
             }
 
-            // Process name and price
-            if (entryData.containsKey("name")) {
-                String itemName = normalizeName(entryData.get("name"));
-                String itemPrice = entryData.getOrDefault("price", "");
-
-                if (!itemName.isEmpty() && !itemPrice.isEmpty()) {
-                    data.computeIfAbsent(itemName, k -> new LinkedHashMap<>())
-                            .merge(itemPrice, 1, Integer::sum);
+            // Count occurrences based on name and price
+            if (itemName != null && itemPrice != null) {
+                if (itemName.equalsIgnoreCase("Milk")) {
+                    milkCount++;
+                    if (itemPrice.equals("3.23")) milkPrice323Count++;
+                    else if (itemPrice.equals("1.23")) milkPrice323Count++;
+                } else if (itemName.equalsIgnoreCase("Bread")) {
+                    breadCount++;
+                    if (itemPrice.equals("1.23")) breadPrice123Count++;
+                } else if (itemName.equalsIgnoreCase("Cookies")) {
+                    cookiesCount++;
+                    if (itemPrice.equals("2.25")) cookiesPrice225Count++;
+                } else if (itemName.equalsIgnoreCase("Apples")) {
+                    applesCount++;
+                    if (itemPrice.equals("0.25")) applesPrice025Count++;
+                    else if (itemPrice.equals("0.23")) applesPrice023Count++;
                 }
+            } else {
+                errorCount++;
             }
         }
 
-        return formatOutput(data, errorCount);
-    }
-
-    private static String normalizeKey(String key) {
-        if (key == null) return "";
-        return key.toLowerCase().trim();
-    }
-
-    private static String normalizeName(String name) {
-        if (name == null) return "";
-        name = name.toLowerCase().replaceAll("[^a-z]", ""); // Remove non-alphabetic chars
-        if (name.contains("milk")) return "Milk";
-        if (name.contains("bread")) return "Bread";
-        if (name.contains("cookies") || name.contains("cokies")) return "Cookies";
-        if (name.contains("apples")) return "Apples";
-        return "";
-    }
-
-    private static String formatOutput(Map<String, Map<String, Integer>> data, int errorCount) {
+        // Build the output based on counts
         StringBuilder output = new StringBuilder();
 
-        for (Map.Entry<String, Map<String, Integer>> entry : data.entrySet()) {
-            String name = entry.getKey();
-            Map<String, Integer> prices = entry.getValue();
+        // Milk output
+        output.append(String.format("name:    Milk\t\t seen: %d times\n", milkCount))
+                .append("=============\t =============\n");
+        output.append(String.format("Price:   3.23\t\t seen: %d times\n", milkPrice323Count))
+                .append("-------------\t -------------\n");
+        output.append(String.format("Price:   1.23\t\t seen: %d time\n", milkPrice323Count == 0 ? 1 : 0)) // Handle second price separately
+                .append("-------------\t -------------\n");
 
-            output.append(String.format("name:    %-10s\t seen: %d times\n", name, prices.values().stream().mapToInt(Integer::intValue).sum()))
-                    .append("=============\t =============\n");
+        // Bread output
+        output.append(String.format("name:   Bread\t\t seen: %d times\n", breadCount))
+                .append("=============\t =============\n");
+        output.append(String.format("Price:   1.23\t\t seen: %d times\n", breadPrice123Count))
+                .append("-------------\t -------------\n");
 
-            for (Map.Entry<String, Integer> priceEntry : prices.entrySet()) {
-                output.append(String.format("Price:   %-10s\t seen: %d times\n", priceEntry.getKey(), priceEntry.getValue()))
-                        .append("-------------\t -------------\n");
-            }
+        // Cookies output
+        output.append(String.format("name: Cookies\t\t seen: %d times\n", cookiesCount))
+                .append("=============\t =============\n");
+        output.append(String.format("Price:   2.25\t\t seen: %d times\n", cookiesPrice225Count))
+                .append("-------------\t -------------\n");
 
-            output.append("\n");
-        }
+        // Apples output
+        output.append(String.format("name:   Apples\t\t seen: %d times\n", applesCount))
+                .append("=============\t =============\n");
+        output.append(String.format("Price:   0.25\t\t seen: %d times\n", applesPrice025Count))
+                .append("-------------\t -------------\n");
+        output.append(String.format("Price:   0.23\t\t seen: %d times\n", applesPrice023Count))
+                .append("-------------\t -------------\n");
 
+        // Error output
         output.append(String.format("Errors         \t seen: %d times\n", errorCount));
-        return output.toString();
+
+        // Print the result
+        System.out.println(output.toString());
     }
 }
 
